--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,12 @@ find_package(Boost COMPONENTS mpi REQUIRED)
 include(FetchContent)
 
 FetchContent_Declare(
+  CLI11
+  GIT_REPOSITORY https://github.com/CLIUtils/CLI11.git
+  GIT_TAG v2.3.2
+  SYSTEM OVERRIDE_FIND_PACKAGE)
+
+FetchContent_Declare(
   kamping
   GIT_REPOSITORY https://github.com/kamping-site/kamping.git
   GIT_TAG d2df638
@@ -24,6 +30,7 @@ FetchContent_Declare(
   GIT_TAG 4.1.1
   SYSTEM OVERRIDE_FIND_PACKAGE)
 
+find_package(CLI11 REQUIRED)
 find_package(kamping REQUIRED)
 find_package(mpl REQUIRED)
 find_package(rwth-mpi REQUIRED)
@@ -31,4 +38,9 @@ add_library(rwth::mpi ALIAS mpi)
 
 add_executable(sorting sorting.cpp)
 target_link_libraries(sorting PUBLIC MPI::MPI_CXX kamping::kamping mpl::mpl Boost::mpi rwth::mpi)
+target_link_libraries(sorting PUBLIC CLI11::CLI11)
 target_compile_features(sorting PUBLIC cxx_std_20)
+
+add_executable(gatherv gatherv.cpp)
+target_link_libraries(gatherv PUBLIC MPI::MPI_CXX kamping::kamping mpl::mpl Boost::mpi rwth::mpi)
+target_compile_features(gatherv PUBLIC cxx_std_20)
