--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -6,4 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = {version ="4.4.18", features=["derive"]}
 mpi = "0.7.0"
+rand = "0.8.5"
+rand_pcg = "0.3.1"
