--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -135,3 +135,6 @@ target_link_libraries(bfs PUBLIC CLI11::CLI11)
 target_link_libraries(bfs PRIVATE kamping_warnings)
 target_link_libraries(bfs PUBLIC KaGen::KaGen spdlog::spdlog)
 target_compile_features(bfs PUBLIC cxx_std_20)
+if(KAMPING_EXAMPLES_USE_BOOST)
+  target_compile_definitions(bfs PUBLIC KAMPING_EXAMPLES_USE_BOOST)
+endif()
