renaming + edge_ping_pong

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -138,3 +138,13 @@ target_compile_features(bfs PUBLIC cxx_std_20)
 if(KAMPING_EXAMPLES_USE_BOOST)
   target_compile_definitions(bfs PUBLIC KAMPING_EXAMPLES_USE_BOOST)
 endif()
+
+add_executable(edge_ping_pong edge_ping_pong.cpp)
+target_link_libraries(edge_ping_pong PUBLIC all_mpi_wrappers)
+target_link_libraries(edge_ping_pong PUBLIC CLI11::CLI11)
+target_link_libraries(edge_ping_pong PRIVATE kamping_warnings)
+target_link_libraries(edge_ping_pong PUBLIC KaGen::KaGen spdlog::spdlog)
+target_compile_features(edge_ping_pong PUBLIC cxx_std_20)
+if(KAMPING_EXAMPLES_USE_BOOST)
+  target_compile_definitions(edge_ping_pong PUBLIC KAMPING_EXAMPLES_USE_BOOST)
+endif()
