--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,7 +116,7 @@ endif()
 
 find_package(KaGen REQUIRED)
 
-add_executable(sorting sorting.cpp)
+add_executable(sorting executables/sorting.cpp)
 target_link_libraries(sorting PUBLIC all_mpi_wrappers)
 target_link_libraries(sorting PUBLIC CLI11::CLI11)
 target_link_libraries(sorting PRIVATE kamping_warnings)
@@ -124,19 +124,20 @@ target_compile_features(sorting PUBLIC cxx_std_20)
 if(KAMPING_EXAMPLES_USE_BOOST)
   target_compile_definitions(sorting PUBLIC KAMPING_EXAMPLES_USE_BOOST)
 endif()
-add_executable(vector_allgather vector_allgather.cpp)
+add_executable(vector_allgather executables/vector_allgather.cpp)
 target_link_libraries(vector_allgather PUBLIC all_mpi_wrappers)
 target_link_libraries(vector_allgather PUBLIC kamping_warnings)
 target_link_libraries(vector_allgather PUBLIC spdlog::spdlog)
 target_compile_features(vector_allgather PUBLIC cxx_std_20)
 
-add_executable(type_ping_pong type_ping_pong.cpp)
+add_executable(type_ping_pong executables/type_ping_pong.cpp)
 target_link_libraries(type_ping_pong PUBLIC MPI::MPI_CXX kamping::kamping)
 target_link_libraries(type_ping_pong PUBLIC CLI11::CLI11)
 target_link_libraries(type_ping_pong PRIVATE kamping_warnings)
 target_compile_features(type_ping_pong PUBLIC cxx_std_20)
 
-add_executable(bfs bfs.cpp)
+add_executable(bfs executables/bfs.cpp)
+target_include_directories(bfs PRIVATE "${CMAKE_SOURCE_DIR}/include")
 target_link_libraries(bfs PUBLIC all_mpi_wrappers)
 target_link_libraries(bfs PUBLIC CLI11::CLI11)
 target_link_libraries(bfs PRIVATE kamping_warnings)
@@ -146,12 +147,3 @@ if(KAMPING_EXAMPLES_USE_BOOST)
   target_compile_definitions(bfs PUBLIC KAMPING_EXAMPLES_USE_BOOST)
 endif()
 
-add_executable(edge_ping_pong edge_ping_pong.cpp)
-target_link_libraries(edge_ping_pong PUBLIC all_mpi_wrappers)
-target_link_libraries(edge_ping_pong PUBLIC CLI11::CLI11)
-target_link_libraries(edge_ping_pong PRIVATE kamping_warnings)
-target_link_libraries(edge_ping_pong PUBLIC KaGen::KaGen spdlog::spdlog)
-target_compile_features(edge_ping_pong PUBLIC cxx_std_20)
-if(KAMPING_EXAMPLES_USE_BOOST)
-  target_compile_definitions(edge_ping_pong PUBLIC KAMPING_EXAMPLES_USE_BOOST)
-endif()
