--- a/experiments/sorting.suite.yaml
+++ b/experiments/sorting.suite.yaml
@@ -1,13 +1,14 @@
 name: sorting
 executable: sorting
-ncores: [1, 48, 96, 384, 768, 1536, 3072, 6144, 12288]
-time_limit: 5
+ncores: [48, 96, 192, 384, 768, 1536, 3072, 6144, 12288]
+time_limit: 10
 threads_per_rank: [1]
 graphs:
   - generator: dummy
     name: random_array
     n_local: 1000000
 config:
-  - algorithm: [kamping, mpl, mpi]
+  - algorithm: [mpi, boost, rwth, kamping, mpl]
     iterations: [5]
-    check: [True]
+    check: [False]
+    warmup: [True]
