--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -127,7 +127,9 @@ target_compile_features(sorting PUBLIC cxx_std_20)
 if(KAMPING_EXAMPLES_USE_BOOST)
   target_compile_definitions(sorting PUBLIC KAMPING_EXAMPLES_USE_BOOST)
 endif()
+
 add_executable(vector_allgather executables/vector_allgather.cpp)
+target_include_directories(vector_allgather PRIVATE "${CMAKE_SOURCE_DIR}/include")
 target_link_libraries(vector_allgather PUBLIC all_mpi_wrappers)
 target_link_libraries(vector_allgather PUBLIC kamping_warnings)
 target_link_libraries(vector_allgather PUBLIC spdlog::spdlog)
