--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,8 +114,9 @@ if(KAMPING_EXAMPLES_USE_BOOST)
   target_link_libraries(all_mpi_wrappers INTERFACE Boost::mpi)
 endif()
 
-set(KAGEN_NODEPS ON CACHE BOOL "" FORCE)
-set(KAGEN_USE_XXHASH OFF CACHE BOOL "" FORCE)
+set(KAGEN_USE_SPARSE_OFF OFF CACHE BOOL "" FORCE)
+#set(KAGEN_NODEPS ON CACHE BOOL "" FORCE)
+#set(KAGEN_USE_XXHASH ON CACHE BOOL "" FORCE)
 set(KAGEN_BUILD_APPS OFF CACHE BOOL "" FORCE)
 set(KAGEN_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
 find_package(KaGen REQUIRED)
