--- a/experiments/sorting.suite.yaml
+++ b/experiments/sorting.suite.yaml
@@ -8,7 +8,7 @@ graphs:
     name: random_array
     n_local: 1000000
 config:
-  - algorithm: [mpi, boost, rwth, kamping, mpl]
+  - algorithm: [mpi, boost, rwth, kamping, kamping_flattened, mpl]
     iterations: [5]
     check: [False]
     warmup: [True]
