make sorting check scalable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -126,6 +126,7 @@ target_include_directories(sorting PRIVATE "${CMAKE_SOURCE_DIR}/include")
 target_link_libraries(sorting PUBLIC all_mpi_wrappers)
 target_link_libraries(sorting PUBLIC CLI11::CLI11)
 target_link_libraries(sorting PRIVATE kamping_warnings)
+target_link_libraries(sorting PRIVATE spdlog::spdlog)
 target_compile_features(sorting PUBLIC cxx_std_20)
 if(KAMPING_EXAMPLES_USE_BOOST)
   target_compile_definitions(sorting PUBLIC KAMPING_EXAMPLES_USE_BOOST)
