--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,7 @@ FetchContent_Declare(
 FetchContent_Declare(
   kamping
   GIT_REPOSITORY https://github.com/kamping-site/kamping.git
-  GIT_TAG d295830
+  GIT_TAG v0.1.1
   SYSTEM OVERRIDE_FIND_PACKAGE)
 
 FetchContent_Declare(
