--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,13 @@ include(FetchContent)
 set(FETCHCONTENT_QUIET FALSE)
 
 FetchContent_Declare(
+  kaval
+  GIT_REPOSITORY https://github.com/niklas-uhl/kaval.git
+  GIT_TAG f01703d
+  SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/kaval)
+FetchContent_MakeAvailable(kaval)
+
+FetchContent_Declare(
   Format.cmake
   GIT_REPOSITORY https://github.com/TheLartians/Format.cmake
   GIT_TAG v1.8.1)
